# OBD-1-Mazda-Miata-diagnostic-tool

./: README.md
project/: 1.8engineCodes.csv  CMakeLists.txt  blink.c  instructions.h  instructions.txt
project/project/: 1.6airBagCode.csv  1.6engineCodes.csv  blink.c
project/tests/codeResetTest/: codeResetTest.c
src/: CMakeLists.txt  blink.c  blink.cpp  blink.h  diagnostics.pl
tests/arrayCreation/: array.cpp  run
tests/codeResetTest/: run  sleep.c
tests/codeTranslationTest/: run
tests/codeTranslationTest/cCompatable/: codeTranslationTest.c
tests/codeTranslationTest/cppCompatable/: codeTranslationTest.cpp  run
